--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="<%= webpackConfig.output.publicPath %>favicon.png"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Gamers Lounge</title>
+    <title>Gamers Lounge Business</title>
     <!-- Bootstrap core CSS     -->
     <meta
       name="viewport"
